# qa_guru_python_hw18

./: README.md  pyproject.toml
