[tool.poetry]
name = "qa-guru-python-hw18-2"
version = "0.1.0"
description = ""
authors = ["Alina Kazeka <ayukazeka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
